--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,10 +1,3 @@
-/**
- * Any CSS included here will be global. The classic template
- * bundles Infima by default. Infima is a CSS framework designed to
- * work well for content-centric websites.
- */
-
-/* You can override the default Infima variables here. */
 :root {
   --ifm-color-primary: #4FC3F7;
   --ifm-color-primary-dark: #42a5d4;
@@ -13,24 +6,17 @@
   --ifm-color-primary-light: #6fd4ff;
   --ifm-color-primary-lighter: #8fe0ff;
   --ifm-color-primary-lightest: #b3ecff;
-  --ifm-background-color: #121212;
-  --ifm-navbar-background-color: #121212;
-  --ifm-footer-background-color: #121212;
+  --ifm-background-color: #ffffff;  /* was #121212 */
+  --ifm-navbar-background-color: #f5f7fa; /* was #121212 */
+  --ifm-footer-background-color: #23272f; /* give the footer a slight dark, but not full black */
   --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(79, 195, 247, 0.1);
+  --docusaurus-highlighted-code-line-bg: rgba(79, 195, 247, 0.07);
 }
 
-/* For readability concerns, you should choose a lighter palette in dark mode. */
+/* Keep dark mode dark, but maybe make it softer */
 [data-theme='dark'] {
-  --ifm-color-primary: #4FC3F7;
-  --ifm-color-primary-dark: #42a5d4;
-  --ifm-color-primary-darker: #3996be;
-  --ifm-color-primary-darkest: #2c7693;
-  --ifm-color-primary-light: #6fd4ff;
-  --ifm-color-primary-lighter: #8fe0ff;
-  --ifm-color-primary-lightest: #b3ecff;
-  --ifm-background-color: #121212;
-  --ifm-navbar-background-color: #121212;
-  --ifm-footer-background-color: #121212;
-  --docusaurus-highlighted-code-line-bg: rgba(79, 195, 247, 0.2);
+  --ifm-background-color: #191c20;
+  --ifm-navbar-background-color: #191c20;
+  --ifm-footer-background-color: #23272f;
+  --docusaurus-highlighted-code-line-bg: rgba(79, 195, 247, 0.13);
 }
